improving whole system

--- a/LastMinutes/Views/LastMinutes/LandingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/LandingPage.cshtml
@@ -25,9 +25,11 @@
 
             <br />
             <div class="col-4 ms-auto d-flex justify-content-end">
-                <button type="submit" class="btn btn-outline-light mb-3">Go -></button>
+                <button type="submit" class="btn btn-outline-light mb-3">Queue</button>
 
             </div>
+
+            <p>Due to Spotify's API rate limiting, this app may take <i>quite a while</i> to gather all the track runtimes.</p>
 
         </form>
 
