--- a/LastMinutes/Views/LastMinutes/LandingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/LandingPage.cshtml
@@ -5,17 +5,10 @@
 }
 
 
-<div class="col d-flex my-5 justify-content-center">
+<div class="col d-flex justify-content-center">
 
-
-    <div class="col-1">
-
-    </div>
 
     <div class="col-4 p-2 text-white">
-
-
-        <h2>LastMinutes</h2>
 
         <h5>Enter your Last.FM Username Below</h5>
 
