--- a/LastMinutes/Views/LastMinutes/PendingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/PendingPage.cshtml
@@ -6,24 +6,18 @@
 }
 
 
-<div class="col d-flex my-5 justify-content-center">
+<div class="col my-3 d-flex justify-content-center">
 
-
-    <div class="col-1">
-
-    </div>
 
     <div class="col-4 p-2 text-white">
 
-
-        <h2>LastMinutes</h2>
 
         <h3>Hey, @Model.Username!</h3>
         <p>
             Your minutes are being tallied!<br /><br />
 
-            <b>ETA</b> @Model.Eta.ToString() minutes <br />
-            <b>Server is </b> @Model.ServerStatus.
+            ETA <b>@Model.Eta.ToString() minutes</b> <br />
+            Server is <b>@Model.ServerStatus</b>.
             
         </p>
 
