--- a/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
@@ -6,32 +6,22 @@
     <title>@ViewData["Title"] - LastMinutes</title>
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.css" />
 </head>
-<body class=" bg-dark">
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="LastMinutes" asp-action="Index">LastMinutes</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="LastMinutes" asp-action="Index">Home</a>
-                        </li>
-                    </ul>
+<body class="bg-dark d-flex align-items-center justify-content-center vh-100">
+
+    <div class="container">
+        <main role="main" class="pb-3 text-white">
+
+            <div class="col-4 mt-5 mx-auto d-flex justify-content-start">
+                <div class="col-4">
+                    <h2>LastMinutes</h2>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+            
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top border-dark footer text-muted  bg-dark">
+    <footer class="border-top border-dark fixed-bottom footer text-muted  bg-dark">
         <div class="container">
             &copy; 2024 - LastMinutes 
         </div>
