--- a/LastMinutes/Views/LastMinutes/PendingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/PendingPage.cshtml
@@ -3,22 +3,24 @@
 *@
 @model LastMinutes.Models.ViewModels.PendingViewModel
 @{
+    ViewData["Title"] = "Processing";
 }
 
 
 <div class="col my-3 d-flex justify-content-center">
 
 
-    <div class="col-4 p-2 text-white">
+    <div class="col-8 col-lg-4 p-2 text-white">
 
 
         <h3>Hey, @Model.Username!</h3>
         <p>
-            Your minutes are being tallied!<br /><br />
+            Your minutes are being tallied :)<br /><br />
 
-            ETA <b>@Model.Eta.ToString() minutes</b> <br />
-            Server is <b>@Model.ServerStatus</b>.
-            
+            Server is <b>@Model.ServerStatus</b><br />
+            Please check back in a couple of hours.<br />
+            <a asp-action="Faq" asp-controller="LastMinutes" class="fw-bold text-decoration-none link-light" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'">Read more..</a>
+
         </p>
 
         
