--- a/LastMinutes/Views/LastMinutes/ResultsPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/ResultsPage.cshtml
@@ -11,14 +11,14 @@
 
 
 
-    <div class="col-4 p-2 text-white">
+    <div class="col-12 col-md-4 p-2 text-white">
 
         <h5>@Html.Raw("@")@Model.Username</h5>
         <br /><br />
 
 
         <h6>You have listened to</h6>
-        <h3 class="my-1 mt-0 pt-0">@Model.TotalMinutes minutes</h3>
+        <h1 class="my-1 mt-0 pt-0">@Model.TotalMinutes minutes</h1>
 
         <p>This was over a period of <b>all time</b>.</p>
 
