--- a/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
@@ -40,9 +40,9 @@
         <main role="main" class="pb-3 text-white">
 
             <div class="row">
-                <div class="col-8 col-lg-5 mt-5 mx-auto d-flex justify-content-start">
+                <div class="col-12 col-lg-5 mt-5 mx-auto d-flex justify-content-start">
                     <div class="col-4">
-                        <h2><a asp-action="Index" asp-controller="LastMinutes" class="text-decoration-none link-light" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'">LastMinutes</a></h2>
+                        <h1><a asp-action="Index" asp-controller="LastMinutes" class="text-decoration-none link-light" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'">LastMinutes</a></h1>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
         </main>
     </div>
 
-    <footer class="border-top border-dark fixed-bottom footer text-muted py-2  bg-dark">
+    <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center">
         <div class="container">
             &copy; 2024 - LastMinutes by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">Lektech</a>
         </div>
