--- a/LastMinutes/Views/Shared/_Layout_ResultsPages.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_ResultsPages.cshtml
@@ -34,22 +34,31 @@
     </style>
 
 </head>
-<body class="bg-dark d-flex align-items-center justify-content-center vh-100">
+<body class="vh-100 d-flex align-items-start align-items-md-center justify-content-center bg-dark">
 
-    <div class="container">
-        <main role="main" class="pb-3 text-white">
+    <div class="container py-5">
+        <main role="main" class="text-white">
+            <div class="d-flex flex-wrap justify-content-center">
 
-            <div class="row">
-                <div class="col-12 col-lg-5 mt-5 mx-auto d-flex justify-content-start">
-                    <div class="col-4">
-                        <h1><a asp-action="Index" asp-controller="LastMinutes" class="text-decoration-none link-light" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'">LastMinutes</a></h1>
+                @if (ViewData["MainPage"] != "true")
+                {
+                    <div class="col-12 col-lg-3 my-auto">
+                        <h1><a asp-action="Index" asp-controller="LastMinutes" class="text-decoration-none link-light goldhover">LastMinutes</a></h1>
+                        <h3>@Html.Raw("@")@Model.Username</h3>
+                        <br />
+                        <h6>You have listened to</h6>
+                        <h1 class="my-1 mt-0 pt-0">@Model.TotalMinutes minutes</h1>
+
+                        <p>This was over a period of <b>all time</b>.</p>
                     </div>
+                }
+
+                <div class="col d-flex justify-content-center flex-wrap">
+                    @RenderBody()
                 </div>
+
             </div>
             
-            <div class="row d-flex justify-content-center flex-wrap">
-                @RenderBody()
-            </div>
         </main>
     </div>
 
