--- a/LastMinutes/Views/LastMinutes/SignIn.cshtml
+++ b/LastMinutes/Views/LastMinutes/SignIn.cshtml
@@ -2,7 +2,9 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Auth Your Username";
+    ViewData["Title"] = "Sign In";
+    ViewData["MetaTagDescription"] = "Sign in to LastMinutes to gain access to special features such as selecting your time period to check your minutes from!";
+    ViewData["MetaTagUrl"] = "SignIn";
 }
 
 
