--- a/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
@@ -1,10 +1,48 @@
-﻿<!DOCTYPE html>
+﻿@{
+    string MetaTagDescription = ViewData["MetaTagDescription"]?.ToString() ?? "Last Minutes! Check your total listening time on your Last.FM account!";
+    string MetaTagUrl = ViewData["MetaTagUrl"]?.ToString() ?? string.Empty;
+    string MetaTagRobots = ViewData["MetaTagRobots"]?.ToString() ?? string.Empty;
+
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LastMinutes</title>
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.css" />
+
+    <!-- Meta Tags Start -->
+    <meta name="description" content="@MetaTagDescription" />
+    <meta name="keywords" content="lastfm, last fm, minutes, total, listening, time, all time" />
+
+    @if (!string.IsNullOrEmpty(MetaTagRobots))
+    {
+        <meta name="robots" content="@MetaTagRobots" />
+    }
+
+    <meta property="og:title" content="@ViewData["Title"] - LastMinutes" />
+    <meta property="og:description" content="@MetaTagDescription" />
+    <meta property="og:image" content="/img/LogoMain.png" />
+    <meta property="og:url" content="@Html.Raw($"https://last-minutes.co.za/{MetaTagUrl}")" />
+
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="@ViewData["Title"] - LastMinutes" />
+    <meta property="twitter:description" content="@MetaTagDescription" />
+    <meta property="twitter:image" content="/img/LogoMain.png" />
+    <!-- Meta Tags End-->
+
+    <!-- Start Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
+
+    <link rel="manifest" href="/img/favicon/manifest.json" />
+    <meta name="theme-color" content="" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
+    <!-- End Favicons -->
+
 
     <style>
         /* width */
@@ -34,28 +72,27 @@
     </style>
 
 </head>
-<body class="bg-dark d-flex align-items-center justify-content-center vh-100">
+<body class="bg-dark d-flex justify-content-center">
 
     <div class="container">
-        <main role="main" class="pb-3 text-white">
+        <main role="main" class="pb-3 text-white vh-100">
 
-            <div class="row">
-                <div class="col-12 col-lg-5 mt-5 mx-auto d-flex justify-content-start">
-                    <div class="col-4">
-                        <h1><a asp-action="Index" asp-controller="LastMinutes" class="text-decoration-none link-light" onmouseover="this.style.color='gold'" onmouseout="this.style.color='white'">LastMinutes</a></h1>
-                    </div>
-                </div>
+    
+            <div class="row d-flex justify-content-center flex-wrap py-3 vh-100 align-items-center">
+
+
+                    @RenderBody()
+                
+
             </div>
-            
-            <div class="row d-flex justify-content-center flex-wrap">
-                @RenderBody()
-            </div>
+
+
         </main>
     </div>
 
     <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center">
         <div class="container">
-            &copy; 2024 - LastMinutes by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
+            &copy; 2024 - LastMinutes by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a> - Powered by LastFM.
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
