fixed results disappearing

--- a/LastMinutes/Views/LastMinutes/FaqPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/FaqPage.cshtml
@@ -4,7 +4,7 @@
 @model LastMinutes.Models.ViewModels.FaqViewModel
 @{
     ViewData["Title"] = "FAQ";
-    ViewData["MetaTagDescription"] = "Read our FAQ page if you have any questions or concerns about how LastMintutes works.";
+    ViewData["MetaTagDescription"] = "Read our FAQ page if you have any questions or concerns about how LastMinutes works.";
     ViewData["MetaTagUrl"] = "faq";
 }
 
