Fixed ConvertMinutesToWordsLong, exception on negative input int

--- a/LastMinutes/Views/LastMinutes/PendingPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/PendingPage.cshtml
@@ -9,9 +9,9 @@
     string[] cuteMessages = new string[]
     {
                 "Hiiii Kiara :)",
-                "Hmm, this Last.FM account is the best one yet :)",
-                "Only a few more days left until Valentines Day <3",
-                "Wow, you're looking gorgeous ;)",
+                "Wow! This is still the best Last.FM account yet :)",
+                "Happy Valentines Day, cutie!",
+                "Wow, you're still looking gorgeous ;)",
     };
 
     Random random = new Random();
@@ -64,7 +64,7 @@
         }
 
         // Call the reloadPage function every 15 seconds
-        setInterval(reloadPage, 5000); // 15000 milliseconds = 15 seconds
+        setInterval(reloadPage, 10000); // 15000 milliseconds = 15 seconds
     </script>
 
 
