--- a/LastMinutes/Views/Shared/_Layout_ResultsPages.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_ResultsPages.cshtml
@@ -46,7 +46,7 @@
     </style>
 
 </head>
-<body class="vh-100 d-flex align-items-start align-items-md-center justify-content-center bg-dark">
+<body class=" bg-dark vh-100 d-flex align-items-start align-items-md-center justify-content-center">
 
     <div class="container py-5">
         <main role="main" class="text-white">
@@ -85,7 +85,9 @@
 
     <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center">
         <div class="container">
-            &copy; 2024 - LastMinutes by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
+            <span class="fw-normal">
+                &copy; 2024 - LastMinutes (Alpha) by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
+            </span>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
