Added app version control

--- a/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_LandingPage.cshtml
@@ -90,10 +90,10 @@
         </main>
     </div>
 
-    <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center">
-        <div class="container">
+    <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center px-0">
+        <div class="container px-0">
             <span class="fw-normal">
-                &copy; 2024 - LastMinutes (Alpha) by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
+                &copy; 2024 - LastMinutes (@ViewData["AppVersionComplete"]) by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
             </span>
         </div>
     </footer>
