--- a/LastMinutes/Views/Shared/_Layout_ResultsPages.cshtml
+++ b/LastMinutes/Views/Shared/_Layout_ResultsPages.cshtml
@@ -86,7 +86,7 @@
     <footer class="border-top border-dark fixed-bottom footer text-muted bg-dark text-center">
         <div class="container">
             <span class="fw-normal">
-                &copy; 2024 - LastMinutes (Alpha) by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
+                &copy; 2024 - LastMinutes (@ViewData["AppVersionComplete"]) by <a href="" class="link-secondary text-decoration-none fw-bold goldhover">mrdawgza</a>
             </span>
         </div>
     </footer>
