Added error 418 and additional FAQ information

--- a/LastMinutes/Views/LastMinutes/FaqPage.cshtml
+++ b/LastMinutes/Views/LastMinutes/FaqPage.cshtml
@@ -85,7 +85,8 @@
                 </ul>
 
                 Currently, only my friends have accounts with special privileges. I'm not sure if this is something I'll ever change in the future.<br />
-                In other words, I've spent a lot of time on this website and I'm not sure if I want to introduce a paywall for features.
+                In other words, I've spent a lot of time on this website and I'm not sure if I want to introduce a paywall for features.<br />
+                Additionally, as the track cache grows in size, I will be a lot more inclined to open more time frames for public access.
             </span>
         </div>
 
